# restitutor

./: ReadMe.md  pyproject.toml
.github/workflows/: test.yml
src/restitutor/: __init__.py  cli.py  context.py  directives.py  formatting.py  nodes.py  roles.py  tables.py
tests/: test_rest.py
tests/data/: general-ante.rst  general-post.rst
