[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "restitutor"
description = "A reStructuredText formatter"
dynamic = ["version"]
readme = "ReadMe.md"
requires-python = ">=3.12"
license = "MPL-2.0"
license-files = ["License"]
authors = [{ name = "Kurt Böhm", email = "kurbo96@gmail.com" }]
keywords = ["restructuredtext", "rest", "formatter", "docs", "documentation"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Markup",
]
dependencies = ["docutils", "pygments"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
restitute = "restitutor.cli:main"

[project.urls]
Repository = "https://github.com/KurtBoehm/restitutor"
Issues = "https://github.com/KurtBoehm/restitutor/issues"
Homepage = "https://github.com/KurtBoehm/restitutor"

[tool.setuptools.dynamic]
version = { attr = "restitutor.__version__" }
